# cuda-opencv-multithreading-with-cmake

./: CMakeLists.txt  README.md  sample.cpp
header/: gpu.hpp
src/: gpu.cu  main.cc
